# simple-rust-axum-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  cloudwatch.tf  config.tf  ecs.tf  repository.tf  s3.tf  vpc.tf
.github/workflows/: aws.yml  task-definition.json
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
terraform/: cloudwatch.tf  ecs.tf  load_balancer.tf  outputs.tf  variables.tf  vpc.tf
tests/: quick_dev.rs
